--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,2 @@
-<div class="container-fluid">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="navbar shadow p-3 mb-5">
-                <span class="navbar-text">Main Navbar</span>
-            </div>
-        </div>
-        <div class="row py-5"></div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-6 shadow p-3 mb-5">
-                <app-issues></app-issues>
-            </div>
-            <div class="col"></div>
-        </div>
-    </div>
-</div>
+<app-taskbar></app-taskbar>
+<app-issues></app-issues>
