--- a/src/app/home/edit-issue/edit-issue.component.html
+++ b/src/app/home/edit-issue/edit-issue.component.html
@@ -1,49 +1,47 @@
-<form>
-    <div class="row">
-      <div class="col-10"></div>
-      <div class="col-2">
-        <button data-bs-toggle="tooltip" data-bs-placement="top" title="Edit issue" class="btn float-end">
-          <i class="fa fa-edit fa-lg" aria-hidden="true"></i></button>
+<form #editForm="ngForm" (submit)="submit(editForm.value)">
+  <div class="row">
+    <div class="col-10"></div>
+    <div class="col-2">
+    </div>
+  </div>
+  <div class="mb-3">
+    <label for="title" class="form-label">Title</label>
+    <input [(ngModel)]="currentIssue.title" name="title" type="text" class="form-control custom-class" id="title">
+  </div>
+  <div class="mb-3">
+    <label for="department" class="form-label">Department</label>
+    <input [(ngModel)]="currentIssue.department" name="department" type="text" class="form-control" id="department">
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="mb-3">
+        <label for="severity" class="form-label">Severity</label>
+        <select [(ngModel)]="currentIssue.severity" name="severity" class="form-select" aria-label="severity">
+          <option selected>{{currentIssue.severity}}</option>
+          <option value="Low">Low</option>
+          <option value="Medium">Medium</option>
+          <option value="High">High</option>
+        </select>
       </div>
     </div>
-    <div class="mb-3">
-      <label for="title" class="form-label">Title</label>
-      <input type="text" class="form-control custom-class" id="title" value="{{currentIssue.title}}">
-    </div>
-    <div class="mb-3">
-      <label for="department" class="form-label">Department</label>
-      <input type="text" class="form-control" id="department" value="{{currentIssue.department}}">
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="mb-3">
-          <label for="severity" class="form-label">Severity</label>
-          <select class="form-select" aria-label="severity">
-            <option selected>{{currentIssue.severity}}</option>
-            <option value="low">Low</option>
-            <option value="medium">Medium</option>
-            <option value="high">High</option>
-          </select>
-        </div>
-      </div>
-      <div class="col">
-        <div class="mb-3">
-          <label for="department" class="form-label">Status</label>
-          <select class="form-select" aria-label="status">
-            <option selected>{{currentIssue.status}}</option>
-            <option value="opened">Opened</option>
-            <option value="closed">Closed</option>
-          </select>
-        </div>
+    <div class="col">
+      <div class="mb-3">
+        <label for="department" class="form-label">Status</label>
+        <select [(ngModel)]="currentIssue.status" name="status" class="form-select" aria-label="status">
+          <option selected>{{currentIssue.status}}</option>
+          <option value="Open">Open</option>
+          <option value="Closed">Closed</option>
+        </select>
       </div>
     </div>
-    <div class="mb-3">
-      <label for="description" class="form-label">Description</label>
-      <div class="form-floating">
-        <textarea class="form-control" placeholder="Description" id="description" style="height: 200px"
-          value="{{currentIssue.description}}"></textarea>
-        <label for="floatingTextarea2"></label>
-      </div>
+  </div>
+  <div class="mb-3">
+    <label for="description" class="form-label">Description</label>
+    <div class="form-floating">
+      <textarea [(ngModel)]="currentIssue.description" name="description" class="form-control" placeholder="Description" id="description" 
+        style="height: 200px"></textarea>
     </div>
-    <button class="btn btn-outline-primary">Save</button>
-  </form>
+  </div>
+  <button class="btn btn-outline-success" type="submit">Save</button>
+  <button class="btn btn-outline-danger float-end" (click)="deleteIssue(currentIssue.id)">Delete</button>
+</form>
