--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,15 +1,6 @@
-<nav class="navbar border mb-5">
+<nav class="navbar border mb-2">
     <div class="container-fluid">
-        <div class="col-3"></div>
-        <div class="col-6">
-            <div class="row">
-                <div class="col"><span class="navbar-text px-2"><i class="fa fa-bug fa-lg" aria-hidden="true"></i>Issue Tracker</span></div>
-                <div class="col">
-                    <button class="btn btn-outline-primary mx-1">New Issue</button>
-                    <button class="btn btn-outline-secondary mx-1">Logout</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-3"></div>
+        <span class="navbar-text px-2"><i class="fa fa-bug fa-lg px-2" aria-hidden="true"></i>IssueTracker</span>
+        <button class="btn btn-outline-secondary mx-1">Logout</button>
     </div>
 </nav>
